# hideaway

./: .gitignore  README.md  hideaway.spec  io.github.bazixv13.Hideaway.flatpakref  io.github.bazixv13.Hideaway.json  meson.build  summary  summary.idx
data/: io.github.bazixv13.Hideaway.desktop  io.github.bazixv13.Hideaway.metainfo.xml  meson.build
delta-indexes/Ss/: ig_T11LOrylGkONxi5drMxUyWR2gbdrGmDBA6UoO8.index
delta-indexes/to/: pxJp9rXScc9eZRZ3PoLKIboWMKXnNSIeKVSN40qow.index
deltas/Ss/ig_T11LOrylGkONxi5drMxUyWR2gbdrGmDBA6UoO8/: 0  superblock
deltas/to/pxJp9rXScc9eZRZ3PoLKIboWMKXnNSIeKVSN40qow/: 0  superblock
po/: POTFILES.in  hideaway.pot  meson.build  pl.po
refs/heads/app/com.github.kali.Hideaway/x86_64/: master
refs/heads/app/io.github.bazixv13.Hideaway/x86_64/: master
refs/heads/appstream/: x86_64
refs/heads/appstream2/: x86_64
src/: hideaway.in  i18n.py  main.py  meson.build  preferences.py  preferences.ui  window.py  window.ui
summaries/: 34d1bdf5f9c81cadcd348bd2a95c18b7abb8e5a8d6a3de3577110247c134f5a8-530f42f6e6078986c3ee7856a9ea949cbb9acf235dbecc6e287e5f54c19b5cd7.delta  3b506e2a70d4739a286c67059a1573b422dabb4dc4d8b9544f66c29d729180fb-530f42f6e6078986c3ee7856a9ea949cbb9acf235dbecc6e287e5f54c19b5cd7.delta  3b506e2a70d4739a286c67059a1573b422dabb4dc4d8b9544f66c29d729180fb-cb1b0039139004a53802716b7bfcd97fcc903a17c4870db0cf2f75d2d7ecba06.delta  3cdb8440fa41fcf9d44d9dc1beaae8d115a408f4d16a6bc49c920a9daac479dd-cb1b0039139004a53802716b7bfcd97fcc903a17c4870db0cf2f75d2d7ecba06.delta  6005829402c39b447c49cbdb02809711ed8df71d20b9b7386789e8dbde3338d3-530f42f6e6078986c3ee7856a9ea949cbb9acf235dbecc6e287e5f54c19b5cd7.delta  6a0e966a0239ed26a8d4428bc187aeca749d649ba0a1e60d263c304dda580c82-cb1b0039139004a53802716b7bfcd97fcc903a17c4870db0cf2f75d2d7ecba06.delta  b77ae84de83893b43ede879eb93b32a87f4dfdb0b32c5c341dfc8c25fad3d46a-530f42f6e6078986c3ee7856a9ea949cbb9acf235dbecc6e287e5f54c19b5cd7.delta  b77ae84de83893b43ede879eb93b32a87f4dfdb0b32c5c341dfc8c25fad3d46a-cb1b0039139004a53802716b7bfcd97fcc903a17c4870db0cf2f75d2d7ecba06.delta
