install_data(
  'io.github.bazixv13.Hideaway.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
  'io.github.bazixv13.Hideaway.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)

install_data(
  'icons/hicolor/scalable/apps/io.github.bazixv13.Hideaway.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
  'icons/hicolor/128x128/apps/io.github.bazixv13.Hideaway.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/128x128/apps')
)

install_data(
  'icons/hicolor/512x512/apps/io.github.bazixv13.Hideaway.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/512x512/apps')
)

install_data(
  'screenshots/hideaway-main.webp',
  install_dir: join_paths(get_option('datadir'), 'app-info', 'media', 'io.github.bazixv13.Hideaway')
)
